--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,5 @@ jobs:
   steps:
     - uses: actions/checkout@v3
 
-    - name: ""Login to Docker hub"
+    - name: "Login to Docker hub"
       run: docker login --username aliahmedhasan --password dckr_pat_Rf4cJtK5RjhnnL-uNNBaJtWB1dY
-
-
-
