--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: "Login to Docker hub"
-      run: docker login --username aliahmedhasan --password dckr_pat_Rf4cJtK5RjhnnL-uNNBaJtWB1dY
+      run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
